; ModuleID = '/home/carl/AnghaBench/mpv/audio/filter/extr_af_rubberband.c_update_pitch.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/filter/extr_af_rubberband.c_update_pitch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.priv = type { double, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.priv*, double)* @update_pitch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_pitch(%struct.priv* %0, double %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.priv*, align 8
  %5 = alloca double, align 8
  store %struct.priv* %0, %struct.priv** %4, align 8
  store double %1, double* %5, align 8
  %6 = load double, double* %5, align 8
  %7 = fcmp olt double %6, 1.000000e-02
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load double, double* %5, align 8
  %10 = fcmp ogt double %9, 1.000000e+02
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %2
  store i32 0, i32* %3, align 4
  br label %29

12:                                               ; preds = %8
  %13 = load double, double* %5, align 8
  %14 = load %struct.priv*, %struct.priv** %4, align 8
  %15 = getelementptr inbounds %struct.priv, %struct.priv* %14, i32 0, i32 0
  store double %13, double* %15, align 8
  %16 = load %struct.priv*, %struct.priv** %4, align 8
  %17 = getelementptr inbounds %struct.priv, %struct.priv* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %12
  %21 = load %struct.priv*, %struct.priv** %4, align 8
  %22 = getelementptr inbounds %struct.priv, %struct.priv* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.priv*, %struct.priv** %4, align 8
  %25 = getelementptr inbounds %struct.priv, %struct.priv* %24, i32 0, i32 0
  %26 = load double, double* %25, align 8
  %27 = call i32 @rubberband_set_pitch_scale(i64 %23, double %26)
  br label %28

28:                                               ; preds = %20, %12
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %11
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @rubberband_set_pitch_scale(i64, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
